--- a/.gitignore
+++ b/.gitignore
@@ -49,4 +49,4 @@ app/etc/local.xml
 # Archivos configurable para debuguear    #
 #-----------------------------------------#
 
-/lib/Varien/Db/Adapter/Pdo\Mysql.php
+/lib/Varien/Db/Adapter/Pdo/Mysql.php
